--- a/partials/camel.html
+++ b/partials/camel.html
@@ -12,14 +12,14 @@
                 <hr class="star-primary">
                 <img src="img/portfolio/camel.jpg" class="img-responsive img-centered" alt="">
                 <p class="text-justify">
-                    The tournament was won by West Germany, who claimed their third World Cup title by defeating reigning champions Argentina 1–0 in the final, a rematch of the previous final four years earlier.
+                    
                 </p>
-                <ul class="list-inline item-details">
+                <!-- <ul class="list-inline item-details">
                     <li>Host country: <strong>Italy<a href="http://startbootstrap.com"></a></strong>
                     </li>
                     <li>Best player: <strong>Salvatore Schillaci</strong>
                     </li>
-                </ul>
+                </ul> -->
                 <button type="button" class="btn btn-default" ng-click="ok()"><i class="fa fa-times"></i> Close</button>
             </div>
         </div>
