--- a/partials/camel.html
+++ b/partials/camel.html
@@ -12,7 +12,71 @@
                 <hr class="star-primary">
                 <img src="img/portfolio/camel.jpg" class="img-responsive img-centered" alt="">
                 <p class="text-justify">
+                    <p class="text-justify">Dewasa ini, rumah sudah sangat berkembang mulai dari desain yang minimalis, elegan dan mewah. Namun, banyak sekali pemilik rumah yang mulai mengabaikan rumahnya saat akan bepergian seperti lupa menyalakan lampu, api, tidak mengunci pintu, dan sebagainya.</p>
+
+                    <blockquote class="text-justify">home is where love  reside, memories are created, friends always belong, and laughter never ends.</blockquote>
+
+                   <p class="text-justify"> Pemantauan dan kontrol perangkat rumah juga menjadi hal yang penting jika memiliki rumah yang berukuran besar karena kita harus mengecek satu per satu perangkat yang ada di rumah kita. Selain itu, ketika kita bepergian secara terburu-buru, biasanya kita lupa mematikan atau menyalakan lampu, atau mengunci pintu. Dengan kondisi diatas, maka kejadian-kejadian yang merugikan sangat mungkin terjadi seperti kebakaran, kecurian dan lain-lain. Tentu hal ini sangat berbahaya jika kita tidak sempat lagi pulang dan mengatur hal-hal tersebut.</p>
+
+                    <p class="text-justify">Selanjutnya, pemilik rumah biasanya tidak mengetahui seberapa besar konsumsi listrik di rumahnya secara detail. Sehingga tagihan listrik menjadi besar. Oleh karena itu, dibutuhkan suatu sistem yang mudah dan bisa diakses kapan saja dan di mana saja untuk mengatur dan mengontrol rumah kita dalam hal Security (Keamanan), Surveillance (Pengawasan), Monitoring (Pemantauan), Power Saving (Penghematan Listrik),dan Disaster Anticipation (Antisipasi Bencana).</p>
+
+                    <p class="text-justify">CAMEL adalah sebuah sistem smart house yang digunakan untuk manajemen keamanan dan produktivitas rumah. Sistem ini ditargetkan untuk pemilik rumah dan developer perumahan untuk memantau dan mengontrol rumah. Dengan sistem CAMEL kita dapat memonitor listrik, meningkatkan keamanan rumah, serta memonitor rumah tersebut melalui aplikasi smart phone dan website.</p>
+
+                    <h3>Halaman Login CAMEL</h3>
+
+                    <img src="http://evandaryanto.com/wp-content/uploads/2014/03/Screenshot_2013-08-22-19-06-25-175x300.png" alt="">
+
+                    <p class="text-justify">Secara garis besar, CAMEL adalah sebuah sistem smart house yang digunakan untuk manajemen keamanan dan produktivitas rumah. Sistem ini dapat memonitor listrik, meningkatkan keamanan rumah, serta memonitor rumah tersebut melalui aplikasi smart phone dan website. CAMEL memiliki tiga komponen utama agar berjalan. Berikut ini adalah tiga komponen CAMEL :</p>
+
+                    <h3>Controller</h3>
+                    <p class="text-justify">Untuk memasang sistem CAMEL pada rumah dibutuhkan sebuah hardware controller yang terkoneksi dengan internet.  Instalasi hardware dilakukan dengan mengatur nama controller dan nomor id rumah dengan mengakses melalui ip address controller. Controller CAMEL menggunakan micro processor yang mengolah sinyal dan meneruskannya ke perangkat listrik.</p>
+
+                    <img src="http://evandaryanto.com/wp-content/uploads/2014/03/IMG20130812004-300x225.jpg" alt="">
                     
+                    <h3>Hardware Camel</h3>
+                    <p class="text-justify">Hardware CAMEL yang terdiri dari (mulai dari kiri) sensor asap, IP-Camera, sensor daya, main controller berupa raspberryPi, dan 4-Array Digital Controlled Switch</p>
+
+                    <h3>Aplikasi</h3>
+                    <p class="text-justify">Aplikasi CAMEL bisa diakses melalui smart phone atau website. Untuk smart phone, CAMEL bisa dijalankan ke platform Android, Windows Phone, atau BlackBerry. Sedangkan, untuk aplikasi web CAMEL dapat diakses di  alamat http://camel.allowed.org:8000/camel. Pengguna perlu mendaftar akun CAMEL untuk mengakses fitur-fitur CAMEL.</p>
+
+                    <h3>Server</h3>
+                    <p class="text-justify">Server CAMEL diperlukan untuk menyimpan data rumah, pengguna, dan perangkat listrik. Server CAMEL juga digunakan untuk meneruskan pesan atau sinyal yang dikirim dari pengguna menuju controller. Server CAMEL juga menyediakan aplikasi website CAMEL yang bisa diakses melalui browser.</p>
+                     
+                    <p class="text-justify">Berikut ini adalah fitur-fitur CAMEL :</p>
+
+                    <h3>Power Management</h3>
+
+                    <p class="text-justify">Manajemen perangkat listrik digunakan untuk menyalakan atau mematikan perangkat listrik rumah secara real-time. Pengguna yang berada dalam satu rumah bisa mengatur switch nyala atau matinya perangkat di rumah tersebut.</p>
+
+                    <p class="text-justify">Hardware CAMEL memiliki 4 port yang bisa dihubungkan ke perangkat listrik rumah. Port tersebut bisa diganti namanya sesuai nama perangkat yang dihubungkan dengan controller CAMEL. Dengan fitur ini, kita bisa mengontrol perangkat listrik yang ada di rumah di mana saja dan kapan saja.</p>
+
+
+                    <h3>Statistik Konsumsi Listrik</h3>
+
+                    <p class="text-justify">Fitur ini menampilkan statistik penggunaan listrik secara real-time dan bisa juga dilihat statistik per periode hari, bulan, atau tahun. Dengan fitur ini, pengguna dapat memonitor dan memantau penggunaan listrik.</p>
+
+                    <p class="text-justify">Pengguna dapat merencakan perkiraan penggunaan listrik untuk hari, bulan, atau tahun tertentu. Jika penggunaan listrik melebihi rencana yang telah dibuat, maka akan muncul notifikasi. Dengan fitur ini pengguna dapat merencanakan dan memantau penggunaan listrik sehingga lebih hemat energi (monitoring).</p>
+
+
+                    <h3>Power Scheduler</h3>
+
+                    <p class="text-justify">Fitur ini digunakan untuk membuat jadwal kepada switch perangkat listrik pada waktu tertentu. Jadwal yang dibuat bisa berulang atau hanya sekali. Perangkat listrik akan mati/nyala sesuai dengan jadwal yang sudah dibuat dan notifikasi akan muncul. Kita bisa menambahkan jadwal untuk suatu perangkat tertentu untuk waktu tertentu.</p>
+
+                    <h3>Chat</h3>
+
+                    <p class="text-justify">Melalui fitur ini, pengguna yang berada dalam satu rumah bisa berkomunikasi dengan chatting. Sesama anggota keluarga bisa berkomunikasi melalui fitur ini. Ketika ada pesan baru, CAMEL akan memberikan notifikasi.</p>
+
+                    <h3>Camera Viewer</h3>
+
+                    <p class="text-justify">Melalui fitur ini, kita bisa memantau keadaan rumah kita dengan melihat kamera yang terhubung dengan controller CAMEL. Camera Viewer dilengkapi dengan fitur Motion Detector. Fitur ini secara default belum diaktifkan. Jika diaktifkan, controller akan menangkap pergerakan dari kamera. Jika pergerakan kamera tertangkap, maka akan muncul notifikasi. Dengan fitur ini, kita bisa mengawasi rumah secara real-time (surveillance).</p>
+
+                    <h3>Fire Detector</h3>
+
+                    <p class="text-justify">Fitur ini digunakan untuk mendeteksi kebakaran melalui sensor intensitas asap. Jika intensitas asap melebihi 75%, maka CAMEL akan mengirimkan notifikasi. Fitur ini memberikan peringatan awal untuk situasi bencana kebakaran, agar bisa diambil tindakan lebih cepat.</p>
+
+                    <h3>Pemantauan Intensitas Asap CAMEL</h3>
+
+                    <p class="text-justify">CAMEL mendapatkan penghargaan Merit Award pada acara INAICTA (Indonesia ICT Award) 2013 yang diadakan di JCC Senayan. Merit Award merupakan penghargaan yang didapatkan karena memiliki selisih nilai kurang dari 10% dari juara utama. Tidak puas karena belum mendapatkan juara kami pun kembali mengikutkan konsep ini ke lomba Compfest 2013 yang diadakan oleh Fasilkom UI. Kami mempersempit scope dengan hanya mengambil fitur manajemen perangkat listrik dan mengganti nama dengan Broomlight. Akhirnya kami mendapatkan Grand Award Mobile IT Solution pada kompetisi tersebut.</p>
                 </p>
                 <!-- <ul class="list-inline item-details">
                     <li>Host country: <strong>Italy<a href="http://startbootstrap.com"></a></strong>
