--- a/partials/sonny.html
+++ b/partials/sonny.html
@@ -12,12 +12,23 @@
                 <hr class="star-primary">
                 <img src="img/portfolio/sonny.jpg" class="img-responsive img-centered" alt="">
                 <p class="text-justify">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, omnis, vitae velit ratione recusandae molestias voluptatem incidunt non quos quae harum praesentium dolorem ipsa numquam libero! Magnam, illum quis itaque.
+                    Hi my name is Sonny Lazuardi, I am a web developer and programmer. I have passion in creative and innovative technology. I have developed the web for about 5 years. I have my skill set on web development stack. I usually code on PHP using Laravel framework and I like hacking with node.js and for front end I use angular.js bundled with firebase for backend.
                 </p>
                 <ul class="list-inline item-details">
-                    <li>Host country: <strong>Italy<a href="http://startbootstrap.com"></a></strong>
+                    <li>
+                        <i class="fa fa-globe"></i> <strong><a href="http://sonnylab.com/">sonnylab.com</a></strong>
                     </li>
-                    <li>Best player: <strong>Salvatore Schillaci</strong>
+                    <li>
+                        <i class="fa fa-facebook-square"></i> <strong><a href="http://fb.me/sonny.lazuardi">fb.me/sonny.lazuardi</a></strong>
+                    </li>
+                    <li>
+                        <i class="fa fa-twitter-square"></i> <strong><a href="http://twitter.com/sonnylazuardi">@sonnylazuardi</a></strong>
+                    </li>
+                    <li>
+                        <i class="fa fa-github-square"></i> <strong><a href="http://github.com/sonnylazuardi">sonnylazuardi</a></strong>
+                    </li>
+                    <li>
+                        <i class="fa fa-linkedin-square"></i> <strong><a href="http://id.linkedin.com/in/sonnylazuardi/">sonnylazuardi</a></strong>
                     </li>
                 </ul>
                 <button type="button" class="btn btn-default" ng-click="ok()"><i class="fa fa-times"></i> Close</button>
